Update rubocop post description

--- a/src/pages/posts/custom-rubocop-cop.mdx
+++ b/src/pages/posts/custom-rubocop-cop.mdx
@@ -4,7 +4,8 @@ export const meta = {
   author: 'Jack Spiva',
   date: '2022-10-20',
   title: 'Writing a Custom Cop for RuboCop',
-  description: 'A quick example of a custom cop for RuboCop I wrote recently',
+  description:
+    'A quick example of a custom cop for RuboCop I wrote recently to enforce usage of a specific intializer for the Ruby Money gem.',
 }
 
 export default (props) => <PostLayout meta={meta} {...props} />
